tests/errors/syn_switch6.java
public class syn_switch6 {
public static void main(String[] args){
switch args.length ) {
 
}
}
}